mule-user-guide/v/3.2/understanding-the-mule-message.adoc
= 了解骡子消息

这个例子介绍了Mule消息，并向您展示了如何使用Mule表达式语言来检查它。它演示了如何查看典型Mule消息的组成，包括其范围，属性和有效负载数据。

我们介绍几个新概念：

*  Mule消息 -  Mule消息是通过mule应用程序传递的关键数据
*  link:/mule-user-guide/v/3.2/message-property-scopes[消息属性范围]  - 消息属性范围帮助组织通过消息生命周期的消息属性（附加到业务特定有效负载的元数据），因为它通过Mule系统
*  link:/mule-user-guide/v/3.2/using-expressions[Mule表达式]  -  Mule具有内置的强大表达式语言，用于查询请求和响应有效载荷和标题。我们将使用表达式来记录对记录器组件有用的内容。

== 您将学习什么

* 如何构建MuleStudio中现有的Mule Flow
* 如何使用表达式来访问Mule Messages属性
* 如何使用Mule消息范围

观看视频
视频:: h_cOKMwH-BM [YouTube的]

看到这个例子在Mule Studio中构建和运行

5分钟

== 先决条件

这些示例要求您运行前面的示例 link:/mule-user-guide/v/3.2/adding-message-processors-to-a-flow[将消息处理器添加到流]。

== 构建示例

1.我们将继续编辑 link:/mule-user-guide/v/3.2/adding-message-processors-to-a-flow[前面的例子]并将记录器组件添加到流程中。将记录器组件从选用板拖到HTTP端点和Hello组件之间的画布上。

2.双击记录器组件编辑其属性。

3.在消息字段中输入以下文本："Hello #[header:INBOUND:name]!"

＃[header：INBOUND：name]是一个mule表达式，它从消息头的INBOUND范围中提取消息属性"name"的值。在另一个例子中，我们将更详细地讨论范围。将范围想象为在消息生命周期的不同部分划分感兴趣项目的一种方式。例如，你在公文包中保存了一套完全不同的物品，以便从运动包中的物品中获取（希望！）。 +
骡子信息由三部分组成

* 标题，其中包含分区为范围的命名属性集
* 有效载荷由业务特定数据（如采购订单）
* 可选附件

一条消息就像你旅行中的行李箱。在运输过程中，您并不在乎行李箱里有什么东西，但是您确实使用手柄来携带它，将轮子卷起来，并使用锁来固定它。 Mule消息的属性很像手提箱的手柄，轮子和锁 - 它们有助于将消息传递到需要的地方。消息有效载荷就像手提箱的内容。大多数时候你不需要知道它，直到你到达目的地。 +
从概念上说，Mule消息沿着你的Mule配置中的块到块的路线传播。每个块都会对消息进行破解，并根据其某个属性的值采取一些操作。 +
把信息想象成你的行李箱通过行李处理系统（Mule）。在这个例子中，我们添加了一个记录器来检查和显示消息属性，就像行李处理系统可能会读取附在行李箱上的路由票上的条形码，以决定丢失行李的最佳方式。

== 运行示例

1.右键单击项目树中的流程，然后选择运行方式...→Mule应用程序。如果您没有停止运行上一个示例中的Mule应用程序，则在File菜单中点击Save或按CTRL + S时，您在此处所做的更改将自动进行热部署。

2.接下来打开浏览器并转到`+http://localhost:8082/?name=Helen+`。您应该在浏览器中看到以下内容：

3.现在回到Mule Studio并检查日志，您将看到Logger向控制台写出了打印"name"消息属性的值。

== 发生了什么？

{0}}您刚刚向流中添加了Logger消息处理器，该处理器演示了如何访问Mule消息属性
* 您使用`#[header:INBOUND:name]`表达式来检查Mule消息标题中的某个属性

== 参考

*  link:/mule-user-guide/v/3.2/logger-element-for-flows[记录仪]
*  link:https://blogs.mulesoft.com/dev/mule-dev/mule-3-architecture-part-2-introducing-the-message-processor/[消息处理器]
*  link:/mule-user-guide/v/3.2/using-expressions[Mule表达式]


'''''
